<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestRest</string>
    <string name="requestViewTitle">Request</string>
    <string name="responseViewTitle">Response</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>

    <string name="AB_Done">DONE</string>
    <string name="AB_Cancel">CANCEL</string>

    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="put">PUT</string>
    <string name="delete">DELETE</string>

    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_load">Load</string>
    <string name="action_manage">Manage</string>
    <string name="action_clear">Clear fields</string>

    <string name="entriesmanager_title">Saved entries manager</string>

    <string name="baseurl_hint">Enter baseURL</string>
    <string name="baseurl">BaseURL</string>
    <string name="post_body_file">Use file</string>
    <string name="post_body">POST Body</string>
    <string name="pick_post_file">Pick file</string>
    <string name="post_body_file_hint">POST body file</string>
    <string name="post_body_hint">Enter POST body content</string>
    <string name="methodurl_hint">Enter REST method url</string>

    <string name="http">http://</string>
    <string name="https">https://</string>

    <string name="preview">Preview</string>
    <string name="send">Send</string>

    <string name="raw_response">Raw</string>
    <string name="json_response">JSON</string>

    <string name="header">Header</string>
    <string name="response">Response</string>
    <string name="empty_response">Empty response</string>

    <string name="no_data">No data to display</string>

    <string name="add_query">Add query parameter</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="error_keyValue">Please enter both key and value</string>

    <string name="add_header">Add header</string>
    <string name="header_name">Header</string>

    <string name="pick_a_name">Pick a name</string>
    <string name="or_select_from_list">Or select from list to overwrite</string>
    <string name="select_to_load">Click on element to load or swipe it right to delete</string>
    <string name="entrieslist_blankslate">No entries</string>

    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait</string>

    <string name="error_emptyFields">Please provide at least baseUrl</string>
    <string name="error_not_unique_name">Please provide a unique name</string>
    <string name="error_request_generic">Something\'s wrong with request, please check syntax</string>

    <string name="label_critical_error">Critical Error</string>
    <string name="label_critical_error_message">Sorry, something went wrong, application will be restarted.\n\nSupport have been notified about the problem.</string>
    <string name="label_critical_error_notify">Support have been notified about this issue, please try again later.</string>
    <string name="label_format_json">Format JSON?</string>
    <string name="label_show_formatted_json">Show formatted Json?</string>
    <string name="label_formatted_json_message">If your Json is very long it can take up to a few minutes to display it on screen. In that time application may be unresponsive. Do you want to proceed?</string>
    <string name="label_continue">Continue</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_pick_file">Pick a file</string>
    <string name="error_connected_exception">ConnectedExeption</string>

</resources>
