<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aaverin="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <pro.anton.averin.networking.testrest.views.androidviews.ExpandableRow
            android:id="@+id/headers_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            aaverin:expandablerow_isOpened="true"
            aaverin:expandablerow_title="@string/header">

            <TextView
                android:id="@+id/tv_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin" />

        </pro.anton.averin.networking.testrest.views.androidviews.ExpandableRow>

        <pro.anton.averin.networking.testrest.views.androidviews.ExpandableRow
            android:id="@+id/body_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            aaverin:expandablerow_isOpened="true"
            aaverin:expandablerow_title="@string/response">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/label_format_json" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/format_json_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/content_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <pro.anton.averin.networking.testrest.views.androidviews.jsonviewer.JsonTreeView
                    android:id="@+id/jsonviewer_tree"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone" />

            </LinearLayout>

        </pro.anton.averin.networking.testrest.views.androidviews.ExpandableRow>

    </LinearLayout>

</ScrollView>